fix z-index for the shelf header

--- a/Files/src/css/component/shelf/shelf.component.scss
+++ b/Files/src/css/component/shelf/shelf.component.scss
@@ -1,24 +1,24 @@
-@import "manastorm-vars";
+@import 'manastorm-vars';
 
 .manastorm-shelf {
-    font-size: 14px;
-    font-family: "nice ampersand", "KlavikaWebBasicRegular";
-    display: flex;
-    flex-direction: column;
-    padding: 0 10px;
-    padding-bottom: 20px;
-    color: var(--foreground-main);
-    background-color: var(--background-main);
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    
-    > *:not(.manastorm-player) {
-        flex-shrink: 0;
-    }
+	font-size: 14px;
+	font-family: 'nice ampersand', 'KlavikaWebBasicRegular';
+	display: flex;
+	flex-direction: column;
+	padding: 0 10px;
+	padding-bottom: 20px;
+	color: var(--foreground-main);
+	background-color: var(--background-main);
+	display: flex;
+	flex-direction: column;
+	position: relative;
+
+	> *:not(.manastorm-player) {
+		flex-shrink: 0;
+	}
 }
 
 shelf-header {
-    z-index: 1;
-    position: relative;
+	z-index: 10;
+	position: relative;
 }
